Change text size and fix spacing of 3 Icons components

--- a/aboveFold.css
+++ b/aboveFold.css
@@ -149,13 +149,12 @@
     padding-left: 22px;
     padding-top: 16px;
     padding-bottom: 16px;
-    font-size: 16px;
+    font-size: 14px;
     border: none;
     cursor: pointer;
     text-align: left;
     border-radius: 4px;
     margin-top: 8px;
-    font-size: 14px;
     color: #444444;
     text-align: justify;
     cursor:pointer;
@@ -226,14 +225,13 @@
     padding-bottom: 16px;
     max-width:180px;
     width: 100%;
-    font-size: 16px;
+    font-size: 14px;
     border: none;
     cursor: pointer;
     text-align: left;
     border-radius: 4px;
     margin-top: 8px;
     margin-right: 3px;
-    font-size: 14px;
     color: #444444;
     text-align: justify;
     margin-right: 0px;
