--- a/boplatsWork.css
+++ b/boplatsWork.css
@@ -101,8 +101,8 @@
 
     .illustrationBodyText{
         margin-bottom: 50px;
-        font-size: 14px;
-        line-height: 19px;
+        font-size: 16px;
+        line-height: 24px;
         padding-left: 10px;
         padding-right: 10px;
         max-width: 300px;
