--- a/exampleFlats.css
+++ b/exampleFlats.css
@@ -36,7 +36,7 @@
 
 .bodyTextExFlat1{
     font-family: Verdana;
-    font-size: 16px;
+    font-size: 14px;
     color: #444444;
     line-height: 21px;
     max-width: 449px;
@@ -82,7 +82,7 @@
 
 .bodyTextExFlat2{
     font-family: Verdana;
-    font-size: 16px;
+    font-size: 14px;
     color: #444444;
     line-height: 21px;
     max-width: 449px;
