--- a/threeIcons.css
+++ b/threeIcons.css
@@ -49,28 +49,28 @@
 
 .grid2BodyText{
     font-family: Verdana;
-    font-size: 14px;
+    font-size: 16px;
     color: #444444;
     text-align: center;
-    line-height: 22px;
+    line-height: 24px;
     margin-top: 16px;
 }
 
 .grid2BodyText2{
     font-family: Verdana;
-    font-size: 14px;
+    font-size: 16px;
     color: #444444;
     text-align: center;
-    line-height: 22px;
+    line-height: 24px;
     margin-top: 32px;
 }
 
 .grid2BodyText2b{
     font-family: Verdana;
-    font-size: 14px;
+    font-size: 16px;
     color: #444444;
     text-align: center;
-    line-height: 22px;
+    line-height: 24px;
     margin-top: 20px;
 }
 
@@ -127,7 +127,7 @@
     padding-bottom: 12px;
     border: none;
     max-width: 141px;
-    margin-top: 80px;
+    margin-top: 62px;
     cursor: pointer;
 }
 
@@ -167,7 +167,7 @@
     padding-bottom: 12px;
     border: none;
     max-width: 141px;
-    margin-top: 60px;
+    margin-top: 64px;
     max-width: 181px;
     cursor: pointer;
 }
